Beautify tournaments tab

--- a/src/main/resources/theme/style-webview.css
+++ b/src/main/resources/theme/style-webview.css
@@ -196,3 +196,17 @@ html.news-detail {
   max-width: 100%;
   height: auto !important;
 }
+
+/***************** Tournaments (WebView) *****************/
+
+html.tournament {
+  padding: 20px;
+}
+
+.tournament th {
+  text-align: left;
+}
+
+.tournament img {
+  background: rgba(255, 255, 255, .1);
+}
