--- a/src/main/resources/theme/tournaments/tournaments.fxml
+++ b/src/main/resources/theme/tournaments/tournaments.fxml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<TableView xmlns:fx="http://javafx.com/fxml/1" fx:id="tournamentsTable" maxHeight="1.7976931348623157E308"
-           maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" xmlns="http://javafx.com/javafx/8.0.111"
-           fx:controller="com.faforever.client.tournament.TournamentsController">
-    <columns>
-        <TableColumn fx:id="nameColumn" editable="false" minWidth="200.0" prefWidth="500.0" text="%tournament.name"/>
-        <TableColumn fx:id="startDateColumn" editable="false" minWidth="100.0" prefWidth="200.0"
-                     text="%tournament.startDate"/>
-        <TableColumn fx:id="endDateColumn" minWidth="100.0" prefWidth="200.0" text="%tournament.endDate"/>
-        <TableColumn fx:id="participantCountColumn" editable="false" minWidth="100.0" prefWidth="100.0"
-                     text="%tournament.participantCount"/>
-        <TableColumn fx:id="gameModeColumn" editable="false" minWidth="200.0" prefWidth="200.0"
-                     text="%tournament.gameMode"/>
-        <TableColumn fx:id="detailsColumn" editable="false" minWidth="200.0" prefWidth="200.0"
-                     text="%tournament.details"/>
-    </columns>
-    <columnResizePolicy>
-        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
-    </columnResizePolicy>
-</TableView>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.web.WebView?>
+<HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="tournamentRoot" maxHeight="1.7976931348623157E308"
+      maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" xmlns="http://javafx.com/javafx/8.0.111"
+      fx:controller="com.faforever.client.tournament.TournamentsController">
+    <children>
+        <ScrollPane fitToWidth="true" hbarPolicy="NEVER" minHeight="0.0" minWidth="0.0" HBox.hgrow="NEVER">
+            <content>
+                <VBox fx:id="tournamentListPane" minHeight="0.0" minWidth="0.0"/>
+            </content>
+        </ScrollPane>
+        <Separator orientation="VERTICAL"/>
+        <AnchorPane HBox.hgrow="ALWAYS">
+            <children>
+                <WebView fx:id="tournamentDetailWebView" prefHeight="-1.0" prefWidth="-1.0"
+                         AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                         AnchorPane.topAnchor="0.0"/>
+            </children>
+        </AnchorPane>
+    </children>
+</HBox>
