--- a/src/main/resources/theme/chat/channel_tab.fxml
+++ b/src/main/resources/theme/chat/channel_tab.fxml
@@ -3,11 +3,10 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.control.TreeTableColumn?>
-<?import javafx.scene.control.TreeTableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -45,16 +44,15 @@
                            <Insets left="10.0" />
                         </VBox.margin>
               </HBox>
-                <TreeTableView fx:id="chatUserTableView" maxHeight="1.7976931348623157E308"
-                               maxWidth="1.7976931348623157E308" showRoot="false" VBox.vgrow="ALWAYS">
-                    <columns>
-                        <TreeTableColumn fx:id="chatUserColumn" editable="false" prefWidth="-1.0" resizable="false"
-                                         sortable="false" text="User"/>
-                    </columns>
-                    <columnResizePolicy>
-                        <TreeTableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
-                    </columnResizePolicy>
-                </TreeTableView>
+                <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+                    <children>
+                        <ListView fx:id="chatUserListView" maxHeight="1.7976931348623157E308"
+                                  maxWidth="1.7976931348623157E308" styleClass="chat-user-list-view"
+                                  AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                  AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        </ListView>
+                    </children>
+                </AnchorPane>
             </children>
           </VBox>
         </items>
