--- a/src/main/resources/theme/login.fxml
+++ b/src/main/resources/theme/login.fxml
@@ -15,98 +15,123 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 <?import java.lang.String?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="loginRoot" alignment="CENTER" fillWidth="false" styleClass="login-root"
-      xmlns="http://javafx.com/javafx/8.0.141" fx:controller="com.faforever.client.login.LoginController">
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="loginRoot" maxHeight="1.7976931348623157E308"
+      maxWidth="1.7976931348623157E308" styleClass="login-root" xmlns="http://javafx.com/javafx/8.0.141"
+      fx:controller="com.faforever.client.login.LoginController">
   <children>
-      <VBox alignment="CENTER" prefWidth="400.0" styleClass="login">
-      <children>
-          <Text onMouseClicked="#onMouseClicked" strokeType="OUTSIDE" strokeWidth="0.0" text="">
-              <VBox.margin>
-                  <Insets bottom="70.0" top="70.0"/>
-              </VBox.margin>
-              <styleClass>
-                  <String fx:value="login-logo"/>
-                  <String fx:value="icon"/>
-              </styleClass>
-          </Text>
-          <VBox fx:id="loginProgressPane" alignment="CENTER" maxWidth="1.7976931348623157E308">
+      <VBox alignment="CENTER" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+          <VBox alignment="CENTER" maxWidth="-Infinity" prefWidth="400.0" styleClass="login">
               <children>
-                  <JFXSpinner prefHeight="80.0" prefWidth="80.0"/>
-                  <Label text="%login.progress.message">
+                  <Text onMouseClicked="#onMouseClicked" strokeType="OUTSIDE" strokeWidth="0.0" text="">
                       <VBox.margin>
-                          <Insets top="14.0"/>
+                          <Insets bottom="70.0" top="70.0"/>
                       </VBox.margin>
-                  </Label>
-                  <Pane VBox.vgrow="ALWAYS"/>
-                  <JFXButton maxWidth="1.7976931348623157E308" mnemonicParsing="false"
-                             onAction="#onCancelLoginButtonClicked" text="%login.button.cancel">
-                      <VBox.margin>
-                          <Insets top="20.0"/>
-                      </VBox.margin>
-                  </JFXButton>
+                      <styleClass>
+                          <String fx:value="login-logo"/>
+                          <String fx:value="icon"/>
+                      </styleClass>
+                  </Text>
+                  <VBox fx:id="loginProgressPane" alignment="CENTER" maxWidth="1.7976931348623157E308">
+                      <children>
+                          <JFXSpinner prefHeight="80.0" prefWidth="80.0"/>
+                          <Label text="%login.progress.message">
+                              <VBox.margin>
+                                  <Insets top="14.0"/>
+                              </VBox.margin>
+                          </Label>
+                          <Pane VBox.vgrow="ALWAYS"/>
+                          <JFXButton maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                                     onAction="#onCancelLoginButtonClicked" text="%login.button.cancel">
+                              <VBox.margin>
+                                  <Insets top="20.0"/>
+                              </VBox.margin>
+                          </JFXButton>
+                      </children>
+                  </VBox>
+                  <VBox fx:id="loginFormPane" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" spacing="5.0">
+                      <children>
+                          <Label fx:id="loginErrorLabel" maxHeight="1.7976931348623157E308"
+                                 maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" styleClass="hint"
+                                 text="This error message is supposed to be long enough to test text wrapping"
+                                 wrapText="true">
+                              <graphic>
+                                  <Label styleClass="icon" text=""/>
+                              </graphic>
+                              <VBox.margin>
+                                  <Insets bottom="5.0"/>
+                              </VBox.margin>
+                          </Label>
+                          <JFXTextField fx:id="usernameInput" minWidth="100.0" promptText="%login.name"/>
+                          <JFXPasswordField fx:id="passwordInput" minWidth="100.0" promptText="%login.password"/>
+                          <GridPane fx:id="serverConfigPane" vgap="5.0">
+                              <columnConstraints>
+                                  <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                              </columnConstraints>
+                              <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                              </rowConstraints>
+                              <children>
+                                  <JFXTextField fx:id="serverHostField" promptText="%login.serverHost"/>
+                                  <JFXTextField fx:id="serverPortField" prefColumnCount="6" promptText="%port"
+                                                GridPane.columnIndex="1"/>
+                                  <JFXTextField fx:id="replayServerHostField" layoutX="10.0" layoutY="7.0"
+                                                promptText="%login.replayServerHost" GridPane.rowIndex="1"/>
+                                  <JFXTextField fx:id="replayServerPortField" layoutX="310.0" layoutY="7.0"
+                                                prefColumnCount="6" promptText="%port" GridPane.columnIndex="1"
+                                                GridPane.rowIndex="1"/>
+                                  <JFXTextField fx:id="apiBaseUrlField" prefColumnCount="6" promptText="%login.apiBaseUrl"
+                                                GridPane.columnSpan="2147483647" GridPane.rowIndex="2"/>
+                              </children>
+                              <VBox.margin>
+                                  <Insets top="20.0"/>
+                              </VBox.margin>
+                          </GridPane>
+                          <JFXCheckBox fx:id="autoLoginCheckBox" alignment="CENTER_RIGHT"
+                                       maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                                       text="%login.autoLogin">
+                              <VBox.margin>
+                                  <Insets bottom="10.0" top="10.0"/>
+                              </VBox.margin>
+                          </JFXCheckBox>
+                          <JFXButton fx:id="loginButton" defaultButton="true" maxWidth="1.7976931348623157E308"
+                                     mnemonicParsing="false" onAction="#onLoginButtonClicked"
+                                     text="%login.button.login"/>
+                          <HBox alignment="CENTER" spacing="10.0">
+                              <children>
+                                  <JFXButton alignment="CENTER" maxWidth="1.7976931348623157E308"
+                                             mnemonicParsing="false" onAction="#forgotLoginClicked" text="%login.forgot"
+                                             HBox.hgrow="ALWAYS"/>
+                                  <JFXButton alignment="CENTER" maxWidth="1.7976931348623157E308"
+                                             mnemonicParsing="false" onAction="#createNewAccountClicked"
+                                             text="%login.create" HBox.hgrow="ALWAYS"/>
+                              </children>
+                              <VBox.margin>
+                                  <Insets top="20.0"/>
+                              </VBox.margin>
+                          </HBox>
+                      </children>
+                  </VBox>
               </children>
           </VBox>
-          <VBox fx:id="loginFormPane" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" spacing="5.0">
-              <children>
-                  <Label fx:id="loginErrorLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                         minHeight="0.0" minWidth="0.0" styleClass="hint"
-                         text="This error message is supposed to be long enough to test text wrapping" wrapText="true">
-                      <graphic>
-                          <Label styleClass="icon" text=""/>
-                      </graphic>
-                      <VBox.margin>
-                          <Insets bottom="5.0"/>
-                      </VBox.margin>
-                  </Label>
-                  <JFXTextField fx:id="usernameInput" minWidth="100.0" promptText="%login.name"/>
-                  <JFXPasswordField fx:id="passwordInput" minWidth="100.0" promptText="%login.password"/>
-                  <GridPane fx:id="serverConfigPane" vgap="5.0">
-                      <columnConstraints>
-                          <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
-                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                      </columnConstraints>
-                      <rowConstraints>
-                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                      </rowConstraints>
-                      <children>
-                          <JFXTextField fx:id="serverHostField" promptText="%login.serverHost"/>
-                          <JFXTextField fx:id="serverPortField" prefColumnCount="6" promptText="%port"
-                                        GridPane.columnIndex="1"/>
-                          <JFXTextField fx:id="replayServerHostField" layoutX="10.0" layoutY="7.0"
-                                        promptText="%login.replayServerHost" GridPane.rowIndex="1"/>
-                          <JFXTextField fx:id="replayServerPortField" layoutX="310.0" layoutY="7.0" prefColumnCount="6"
-                                        promptText="%port" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                          <JFXTextField fx:id="apiBaseUrlField" prefColumnCount="6" promptText="%login.apiBaseUrl"
-                                        GridPane.columnSpan="2147483647" GridPane.rowIndex="2"/>
-                      </children>
-                      <VBox.margin>
-                          <Insets top="20.0"/>
-                      </VBox.margin>
-                  </GridPane>
-                  <JFXCheckBox fx:id="autoLoginCheckBox" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308"
-                               mnemonicParsing="false" text="%login.autoLogin">
-                      <VBox.margin>
-                          <Insets bottom="10.0" top="10.0"/>
-                      </VBox.margin>
-                  </JFXCheckBox>
-                  <JFXButton fx:id="loginButton" defaultButton="true" maxWidth="1.7976931348623157E308"
-                             mnemonicParsing="false" onAction="#onLoginButtonClicked" text="%login.button.login"/>
-                  <HBox alignment="CENTER" spacing="10.0">
-                      <children>
-                          <JFXButton alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
-                                     onAction="#forgotLoginClicked" text="%login.forgot" HBox.hgrow="ALWAYS"/>
-                          <JFXButton alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
-                                     onAction="#createNewAccountClicked" text="%login.create" HBox.hgrow="ALWAYS"/>
-                      </children>
-                      <VBox.margin>
-                          <Insets top="20.0"/>
-                      </VBox.margin>
-                  </HBox>
-              </children>
-          </VBox>
-      </children>
-    </VBox>
+      </VBox>
+      <HBox alignment="BOTTOM_RIGHT" maxWidth="1.7976931348623157E308" VBox.vgrow="NEVER">
+          <children>
+              <JFXButton fx:id="serverStatusButton" onMouseClicked="#seeServerStatus" text="See server status">
+                  <graphic>
+                      <Text text="">
+                          <styleClass>
+                              <String fx:value="icon"/>
+                          </styleClass>
+                      </Text>
+                  </graphic>
+                  <HBox.margin>
+                      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                  </HBox.margin>
+              </JFXButton>
+          </children>
+      </HBox>
   </children>
 </VBox>
