Minimum width for chat author column in compact mode

--- a/src/main/resources/theme/style-webview.css
+++ b/src/main/resources/theme/style-webview.css
@@ -131,6 +131,7 @@ img.country-flag {
 
 .chat-section.compact td.author {
   vertical-align: top;
+  min-width: 200px;
 }
 
 .chat-section.compact td.author * {
