--- a/src/main/resources/theme/play/create_game.fxml
+++ b/src/main/resources/theme/play/create_game.fxml
@@ -15,128 +15,103 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="createGameRoot" hgap="10.0" styleClass="create-game-root"
-          vgap="10.0" xmlns="http://javafx.com/javafx/8.0.141"
-          fx:controller="com.faforever.client.game.CreateGameController">
+<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="createGameRoot" hgap="10.0" styleClass="create-game-root" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="com.faforever.client.game.CreateGameController">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0"/>
-        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="128.0"/>
-        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="128.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0" />
+        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="128.0" />
+        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="128.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints vgrow="NEVER"/>
-        <RowConstraints minHeight="10.0" vgrow="NEVER"/>
-        <RowConstraints vgrow="NEVER"/>
-        <RowConstraints fillHeight="false" valignment="BOTTOM" vgrow="NEVER"/>
-        <RowConstraints vgrow="NEVER"/>
-        <RowConstraints minHeight="10.0"/>
-        <RowConstraints vgrow="ALWAYS"/>
-        <RowConstraints vgrow="NEVER"/>
+        <RowConstraints vgrow="NEVER" />
+        <RowConstraints minHeight="10.0" vgrow="NEVER" />
+        <RowConstraints vgrow="NEVER" />
+        <RowConstraints fillHeight="false" valignment="BOTTOM" vgrow="NEVER" />
+        <RowConstraints vgrow="NEVER" />
+        <RowConstraints minHeight="10.0" />
+        <RowConstraints vgrow="ALWAYS" />
+        <RowConstraints vgrow="NEVER" />
     </rowConstraints>
     <children>
-        <JFXTextField fx:id="titleTextField" promptText="%game.create.title" styleClass="game-title-input"
-                      GridPane.columnSpan="2147483647"/>
-        <JFXPasswordField fx:id="passwordTextField" promptText="%game.create.password" GridPane.rowIndex="1"/>
+        <JFXTextField fx:id="titleTextField" promptText="%game.create.title" styleClass="game-title-input" GridPane.columnSpan="2147483647" />
+        <JFXPasswordField fx:id="passwordTextField" promptText="%game.create.password" GridPane.rowIndex="1" />
         <Separator maxWidth="1.7976931348623157E308" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
             <padding>
-                <Insets left="2.0" right="2.0" top="2.0"/>
+                <Insets left="2.0" right="2.0" top="2.0" />
             </padding>
         </Separator>
-        <Label styleClass="h1" text="%game.create.gameType" GridPane.rowIndex="3"/>
-        <Label styleClass="h1" text="%game.create.map" GridPane.columnIndex="2" GridPane.rowIndex="3"/>
-        <JFXTextField fx:id="mapSearchTextField" promptText="%game.create.searchMap" GridPane.columnIndex="2"
-                      GridPane.rowIndex="4"/>
-        <ListView fx:id="mapListView" maxHeight="1.7976931348623157E308" prefHeight="100.0" GridPane.columnIndex="2"
-                  GridPane.rowIndex="5" GridPane.rowSpan="2" GridPane.vgrow="ALWAYS"/>
-        <JFXButton fx:id="createGameButton1" layoutX="828.0" layoutY="462.0" maxWidth="1.7976931348623157E308"
-                   mnemonicParsing="false" onAction="#onCreateButtonClicked" text="%cancel" GridPane.columnIndex="3"
-                   GridPane.rowIndex="7"/>
-        <JFXButton fx:id="createGameButton" defaultButton="true" maxWidth="1.7976931348623157E308"
-                   mnemonicParsing="false" onAction="#onCreateButtonClicked" text="%game.create.create"
-                   GridPane.columnIndex="4" GridPane.rowIndex="7"/>
-        <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" spacing="10.0" GridPane.columnIndex="3"
-              GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
+        <Label styleClass="h2" text="%game.create.gameType" GridPane.rowIndex="3" />
+        <Label styleClass="h2" text="%game.create.map" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+        <JFXTextField fx:id="mapSearchTextField" promptText="%game.create.searchMap" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+        <ListView fx:id="mapListView" maxHeight="1.7976931348623157E308" prefHeight="100.0" GridPane.columnIndex="2" GridPane.rowIndex="5" GridPane.rowSpan="2" GridPane.vgrow="ALWAYS" />
+        <JFXButton fx:id="createGameButton1" layoutX="828.0" layoutY="462.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onCreateButtonClicked" text="%cancel" GridPane.columnIndex="3" GridPane.rowIndex="7" />
+        <JFXButton fx:id="createGameButton" defaultButton="true" maxWidth="1.7976931348623157E308" minWidth="-Infinity" mnemonicParsing="false" onAction="#onCreateButtonClicked" text="%game.create.create" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+        <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" spacing="10.0" GridPane.columnIndex="3" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
             <children>
-                <JFXTextField fx:id="minRankingTextField" minWidth="30.0" prefWidth="60.0"
-                              promptText="%games.create.minRating" HBox.hgrow="NEVER"/>
-                <Label text="%games.create.minRating"/>
-                <Pane minHeight="0.0" minWidth="0.0" HBox.hgrow="ALWAYS"/>
-                <Label text="%games.create.maxRating"/>
-                <JFXTextField fx:id="maxRankingTextField" minWidth="30.0" prefWidth="60.0"
-                              promptText="%games.create.maxRating" HBox.hgrow="NEVER"/>
+                <JFXTextField fx:id="minRankingTextField" minWidth="30.0" prefWidth="60.0" promptText="%games.create.minRating" HBox.hgrow="NEVER" />
+                <Label text="%games.create.minRating" />
+                <Pane minHeight="0.0" minWidth="0.0" HBox.hgrow="ALWAYS" />
+                <Label text="%games.create.maxRating" />
+                <JFXTextField fx:id="maxRankingTextField" minWidth="30.0" prefWidth="60.0" promptText="%games.create.maxRating" HBox.hgrow="NEVER" />
             </children>
             <padding>
-                <Insets left="2.0" right="2.0" top="2.0"/>
+                <Insets left="2.0" right="2.0" top="2.0" />
             </padding>
         </HBox>
-        <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="%game.create.rating"
-               textAlignment="JUSTIFY" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
-        <Pane fx:id="mapPreviewPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-              styleClass="map-preview" GridPane.columnIndex="3" GridPane.columnSpan="2147483647"
-              GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.rowSpan="3" GridPane.valignment="CENTER"/>
-        <VBox alignment="BOTTOM_LEFT" styleClass="card-dimmer" GridPane.columnIndex="3" GridPane.columnSpan="2147483647"
-              GridPane.rowIndex="3" GridPane.rowSpan="3">
+        <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="%game.create.rating" textAlignment="JUSTIFY" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+        <Pane fx:id="mapPreviewPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="map-preview" GridPane.columnIndex="3" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.rowSpan="3" GridPane.valignment="CENTER" />
+        <VBox alignment="BOTTOM_LEFT" styleClass="card-dimmer" GridPane.columnIndex="3" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" GridPane.rowSpan="3">
             <children>
-                <Label fx:id="mapNameLabel" maxWidth="1.7976931348623157E308" minWidth="0.0" styleClass="card-title"
-                       text="&lt;Very long map title to see if wrapping works&gt;" wrapText="true"/>
+                <Label fx:id="mapNameLabel" maxWidth="1.7976931348623157E308" minWidth="0.0" styleClass="card-title" text="&lt;Very long map title to see if wrapping works&gt;" wrapText="true" />
             </children>
         </VBox>
-        <GridPane hgap="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                  GridPane.columnIndex="3" GridPane.columnSpan="2147483647" GridPane.rowIndex="6"
-                  GridPane.vgrow="ALWAYS">
+        <GridPane hgap="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.columnSpan="2147483647" GridPane.rowIndex="6" GridPane.vgrow="ALWAYS">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" vgrow="NEVER"/>
-                <RowConstraints minHeight="10.0" vgrow="NEVER"/>
-                <RowConstraints minHeight="3.0" vgrow="NEVER"/>
-                <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="160.0" vgrow="ALWAYS"/>
+                <RowConstraints minHeight="10.0" vgrow="NEVER" />
+                <RowConstraints minHeight="10.0" vgrow="NEVER" />
+                <RowConstraints minHeight="3.0" vgrow="NEVER" />
+                <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="160.0" vgrow="ALWAYS" />
             </rowConstraints>
             <children>
                 <Label fx:id="mapSizeLabel" text="&lt;Size&gt;" GridPane.columnIndex="1" GridPane.rowIndex="1">
                     <graphic>
-                        <Label styleClass="icon" text=""/>
+                        <Label styleClass="icon" text="" />
                     </graphic>
                 </Label>
                 <Label fx:id="mapPlayersLabel" text="&lt;MaxPlayers&gt;" GridPane.rowIndex="1">
                     <graphic>
-                        <Label styleClass="icon" text=""/>
+                        <Label styleClass="icon" text="" />
                     </graphic>
                 </Label>
-                <Label fx:id="versionLabel" text="&lt;Version&gt;" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
-                <Separator GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2"/>
+                <Label fx:id="versionLabel" text="&lt;Version&gt;" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                <Separator GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" />
                 <ScrollPane fitToWidth="true" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
                     <content>
-                        <Label fx:id="mapDescriptionLabel" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308"
-                               maxWidth="1.7976931348623157E308" text="&lt;Description&gt;" wrapText="true"/>
+                        <Label fx:id="mapDescriptionLabel" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="&lt;Description&gt;" wrapText="true" />
                     </content>
                 </ScrollPane>
             </children>
         </GridPane>
-        <Label styleClass="h1" text="%game.create.mods" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-        <JFXButton mnemonicParsing="false" onAction="#onRandomMapButtonClicked" text="%game.create.randomMap"
-                   GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="7"/>
-        <ListView fx:id="modListView" maxHeight="1.7976931348623157E308" prefHeight="100.0" GridPane.columnIndex="1"
-                  GridPane.rowIndex="4" GridPane.rowSpan="3" GridPane.vgrow="ALWAYS"/>
-        <JFXButton mnemonicParsing="false" onAction="#onSelectDefaultGameTypeButtonClicked"
-                   text="%game.create.defaultGameType" GridPane.halignment="CENTER" GridPane.rowIndex="7"/>
-        <ListView fx:id="featuredModListView" prefHeight="100.0" GridPane.rowIndex="4" GridPane.rowSpan="3"/>
+        <Label styleClass="h2" text="%game.create.mods" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <JFXButton mnemonicParsing="false" onAction="#onRandomMapButtonClicked" text="%game.create.randomMap" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="7" />
+        <ListView fx:id="modListView" maxHeight="1.7976931348623157E308" prefHeight="100.0" GridPane.columnIndex="1" GridPane.rowIndex="4" GridPane.rowSpan="3" GridPane.vgrow="ALWAYS" />
+        <JFXButton mnemonicParsing="false" onAction="#onSelectDefaultGameTypeButtonClicked" text="%game.create.defaultGameType" GridPane.halignment="CENTER" GridPane.rowIndex="7" />
+        <ListView fx:id="featuredModListView" prefHeight="100.0" GridPane.rowIndex="4" GridPane.rowSpan="3" />
         <HBox alignment="CENTER" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
             <children>
-                <JFXButton mnemonicParsing="false" onAction="#onDeselectModsButtonClicked"
-                           text="%game.create.deselectAll"/>
-                <JFXButton mnemonicParsing="false" onAction="#onReloadModsButtonClicked" text="%game.create.reload"/>
+                <JFXButton mnemonicParsing="false" onAction="#onDeselectModsButtonClicked" text="%game.create.deselectAll" />
+                <JFXButton mnemonicParsing="false" onAction="#onReloadModsButtonClicked" text="%game.create.reload" />
             </children>
         </HBox>
-        <JFXCheckBox fx:id="onlyForFriendsCheckBox" mnemonicParsing="false" text="%game.create.onlyFriends"
-                     GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+        <JFXCheckBox fx:id="onlyForFriendsCheckBox" mnemonicParsing="false" text="%game.create.onlyFriends" GridPane.columnIndex="1" GridPane.rowIndex="1" />
     </children>
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
 </GridPane>
