--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -780,6 +780,7 @@
   -fx-border-width: 0 0 1 0;
   -fx-padding: 20 10 20 10;
   -fx-background-radius: 0;
+  -fx-background-color: transparent;
 }
 
 .news-item:hover, .tournament-item:hover {
@@ -788,7 +789,7 @@
   -fx-border-color: transparent transparent -divider-color -dimmed-accent;
 }
 
-.news-item:selected, .tournament-item:selected {
+.news-list .list-cell:filled:selected .news-item, .tournament-item:selected {
   -fx-border-width: 0 0 1 4;
   -fx-padding: 20 10 20 6;
   -fx-border-color: transparent transparent -divider-color -fx-accent;
@@ -797,6 +798,11 @@
 .news-item-authored {
   -fx-font-size: 0.8em;
   -fx-text-fill: -fx-mid-text-color;
+}
+
+.news-list .list-cell, .tournament-list .list-cell {
+  -fx-padding: 0 0 0 0;
+  -fx-background-color: transparent;
 }
 
 /***************** Notification Badge *****************/
