--- a/src/main/resources/theme/vault/replay/live_replays.fxml
+++ b/src/main/resources/theme/vault/replay/live_replays.fxml
@@ -2,19 +2,16 @@
 
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<TableView xmlns:fx="http://javafx.com/fxml/1" fx:id="liveReplayControllerRoot" maxHeight="1.7976931348623157E308"
-           maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" xmlns="http://javafx.com/javafx/8.0.111"
-           fx:controller="com.faforever.client.vault.replay.LiveReplayController">
+<TableView xmlns:fx="http://javafx.com/fxml/1" fx:id="liveReplayControllerRoot" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="com.faforever.client.vault.replay.LiveReplayController">
     <columns>
-        <TableColumn fx:id="mapPreviewColumn" editable="false" minWidth="-1.0" resizable="false" text="%game.map"/>
-        <TableColumn fx:id="gameTitleColumn" editable="false" minWidth="-1.0" prefWidth="200.0" text="%game.title"/>
-        <TableColumn fx:id="playersColumn" editable="false" minWidth="-1.0" prefWidth="200.0" text="%game.players"/>
-        <TableColumn fx:id="hostColumn" editable="false" minWidth="-1.0" text="%game.host"/>
-        <TableColumn fx:id="modsColumn" editable="false" minWidth="-1.0" prefWidth="100.0" text="%game.mods"/>
-        <TableColumn fx:id="watchColumn" editable="false" minWidth="-1.0" prefWidth="100.0" sortable="false"
-                     text="%game.watch"/>
+        <TableColumn fx:id="mapPreviewColumn" editable="false" minWidth="-1.0" resizable="false" text="%game.map" />
+        <TableColumn fx:id="gameTitleColumn" editable="false" minWidth="-1.0" prefWidth="200.0" text="%game.title" />
+        <TableColumn fx:id="playersColumn" editable="false" minWidth="-1.0" text="%game.players" />
+        <TableColumn fx:id="hostColumn" editable="false" minWidth="-1.0" prefWidth="120.0" text="%game.host" />
+        <TableColumn fx:id="modsColumn" editable="false" minWidth="-1.0" prefWidth="200.0" text="%game.mods" />
+        <TableColumn fx:id="watchColumn" editable="false" minWidth="-1.0" prefWidth="150.0" sortable="false" text="%game.watch" />
     </columns>
     <columnResizePolicy>
-        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
     </columnResizePolicy>
 </TableView>
