Improve updater and endpoint info
The new mechanism reads a file hosted on faforever.com which allows us
to add more options, like `mandatory`, which can be set to force client
updates in future (e. g. when ICE out), and platform-specific URLs in
order to avoid guesses based on the file name.

Additionally, specifying endpoint URLs prepares for the much requested
drop-down like "Production", "Test" and "ICE Test" and allows to change
those w/o client update.

--- a/src/main/resources/theme/login.fxml
+++ b/src/main/resources/theme/login.fxml
@@ -78,7 +78,7 @@
                                         promptText="%login.replayServerHost" GridPane.rowIndex="1"/>
                           <JFXTextField fx:id="replayServerPortField" layoutX="310.0" layoutY="7.0" prefColumnCount="6"
                                         promptText="%port" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                          <JFXTextField fx:id="apiBaseUrl" prefColumnCount="6" promptText="%login.apiBaseUrl"
+                          <JFXTextField fx:id="apiBaseUrlField" prefColumnCount="6" promptText="%login.apiBaseUrl"
                                         GridPane.columnSpan="2147483647" GridPane.rowIndex="2"/>
                       </children>
                       <VBox.margin>
