--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -833,6 +833,51 @@
   -fx-background-color: transparent;
 }
 
+/***************** Tutorials *****************/
+
+.tutorial-item {
+  -fx-border-color: -divider-color;
+  -fx-border-width: 0 0 1 0;
+  -fx-cursor: hand;
+  -fx-text-fill: -fx-mid-text-color;
+  -fx-padding: 20 10 20 10;
+  -fx-background-radius: 0;
+}
+
+.tutorial-item:hover {
+  -fx-border-width: 0 0 1 4;
+  -fx-padding: 20 10 20 6;
+  -fx-border-color: transparent transparent -divider-color -dimmed-accent;
+}
+
+.tutorial-item:selected {
+  -fx-border-width: 0 0 1 4;
+  -fx-padding: 20 10 20 6;
+  -fx-border-color: transparent transparent -divider-color -fx-accent;
+}
+
+.tutorial-item-authored {
+  -fx-text-fill: -secondary-text-color;
+  -fx-font-size: 0.8em;
+}
+
+.tutorial-category-title {
+  -fx-text-fill: -fx-light-text-color;
+  -fx-font-size: 1.2em;
+}
+
+.tutorial-category-item {
+  -fx-border-color: -divider-color;
+  -fx-border-width: 0 0 1 0;
+  -fx-text-fill: -fx-mid-text-color;
+  -fx-padding: 20 10 20 10;
+  -fx-background-radius: 0;
+}
+
+.tutorial-detail-title {
+  -fx-font-size: 1.2em;
+}
+
 /***************** Notification Badge *****************/
 
 .notification-badge {
