--- a/src/main/resources/theme/play/games_table.fxml
+++ b/src/main/resources/theme/play/games_table.fxml
@@ -11,10 +11,11 @@
     <TableColumn fx:id="mapPreviewColumn" editable="false" minWidth="45.0" prefWidth="45.0" resizable="false"
                  text="%game.map"/>
     <TableColumn fx:id="gameTitleColumn" editable="false" minWidth="20.0" prefWidth="1000.0" text="%game.title"/>
-    <TableColumn fx:id="playersColumn" editable="false" minWidth="20.0" prefWidth="100.0" text="%game.players"/>
+    <TableColumn fx:id="playersColumn" editable="false" minWidth="20.0" prefWidth="50.0" text="%game.players"/>
     <TableColumn fx:id="ratingColumn" editable="false" minWidth="20.0" prefWidth="100.0" text="%game.rating"/>
     <TableColumn fx:id="modsColumn" editable="false" minWidth="20.0" prefWidth="100.0" text="%game.mods"/>
     <TableColumn fx:id="hostColumn" editable="false" minWidth="20.0" prefWidth="100.0" text="%game.host"/>
+    <TableColumn fx:id="coopMissionName" editable="false" minWidth="20.0" prefWidth="100.0" text="%game.missionName"/>
   </columns>
   <columnResizePolicy>
     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
