Add start time column to live replay tab
We also sort games from most to least recent.  This really helps gauge
if a given replay is worth watching.

Signed-off-by: Igor Kotrasinski <i.kotrasinsk@gmail.com>

--- a/src/main/resources/theme/vault/replay/live_replays.fxml
+++ b/src/main/resources/theme/vault/replay/live_replays.fxml
@@ -5,6 +5,7 @@
 <TableView xmlns:fx="http://javafx.com/fxml/1" fx:id="liveReplayControllerRoot" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="com.faforever.client.vault.replay.LiveReplayController">
     <columns>
         <TableColumn fx:id="mapPreviewColumn" editable="false" minWidth="-1.0" resizable="false" text="%game.map" />
+        <TableColumn fx:id="startTimeColumn" editable="false" minWidth="-1.0" prefWidth="50.0" text="%game.startTime" />
         <TableColumn fx:id="gameTitleColumn" editable="false" minWidth="-1.0" prefWidth="200.0" text="%game.title" />
         <TableColumn fx:id="playersColumn" editable="false" minWidth="-1.0" text="%game.players" />
         <TableColumn fx:id="hostColumn" editable="false" minWidth="-1.0" prefWidth="120.0" text="%game.host" />
